--- a/src/app/views/base2/ups-monitoring/ups-monitoring.component.html
+++ b/src/app/views/base2/ups-monitoring/ups-monitoring.component.html
@@ -5,7 +5,7 @@
     <!-- Card for the first uploaded image -->
     <div class="col-md-6">
       <div class="card">
-        <img src="../../../../assets/images/powerone.jpg" class="card-img-top powerone" alt="Power One Micro Systems 1">
+        <img src="../../../../assets/images/857.jpg" class="card-img-top_857" alt="Power One Micro Systems 1">
         <div class="card-body">
           <h5 class="card-title">Power One Micro Systems</h5>
           <table class="table">
@@ -40,7 +40,7 @@
               </tr>
             </tbody>
           </table>
-          <button class="btn btn-light">Contact Support</button>
+          <a href="http://172.16.26.28/" target="blank" class="btn"><button>Click for Monitoring</button></a>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
     <!-- Card for the second uploaded image -->
     <div class="col-md-6">
       <div class="card">
-        <img src="../../../../assets/images/powerone2.jpg" class="card-img-top" alt="Power One Micro Systems 2">
+        <img src="../../../../assets/images/856.jpg" class="card-img-top_856" alt="Power One Micro Systems 2">
         <div class="card-body">
           <h5 class="card-title">Power One Micro Systems</h5>
           <table class="table">
@@ -83,9 +83,33 @@
               </tr>
             </tbody>
           </table>
-          <button class="btn btn-light">Contact Support</button>
+          <a href="http://172.16.26.28/" target="_blank" class="btn"><button>Click for Monitoring</button></a>
         </div>
       </div>
+      <!-- <div class="left-corner">
+        <h3 class="footer">Contact support</h3>
+        <h4>
+          Phone Number
+        </h4>
+      </div>
+    </div> -->
+  <!-- <div class = "left-corner">
+    <h3>
+      Support & Help
+    </h3>
+    <h4>
+      Contact Numbers
+      <br>
+      ABC - 00000
+      <br>
+      PQR - 11111
+    </h4>
+  </div> -->
+
+    <div class="footer-content">
+      <h3>Contact Support</h3>
+      <p>Phone Number: <a href="tel:+1234567890">+1234567890</a></p>
+      <p>Email: <a href="mailto:support@example.com">supportexample.com</a></p>
     </div>
   </div>
   
