--- a/src/app/views/base2/ups-monitoring/ups-monitoring.component.html
+++ b/src/app/views/base2/ups-monitoring/ups-monitoring.component.html
@@ -83,7 +83,8 @@
               </tr>
             </tbody>
           </table>
-          <a href="http://172.16.26.28/" target="_blank" class="btn"><button>Click for Monitoring</button></a>
+          <button href="http://172.16.26.29/" cButton color="primary">Click for Monitoring</button>
+         
         </div>
       </div>
       <!-- <div class="left-corner">
