--- a/src/app/views/base2/ups-monitoring/ups-monitoring.component.html
+++ b/src/app/views/base2/ups-monitoring/ups-monitoring.component.html
@@ -40,7 +40,7 @@
               </tr>
             </tbody>
           </table>
-          <a href="http://172.16.26.28/" target="blank" class="btn"><button>Click for Monitoring</button></a>
+          <a href="http://172.16.26.28/" class="btn btn-primary">Click for Monitoring</a>
         </div>
       </div>
     </div>
@@ -83,7 +83,8 @@
               </tr>
             </tbody>
           </table>
-          <button href="http://172.16.26.29/" cButton color="primary">Click for Monitoring</button>
+          <a href="http://172.16.26.29/" class="btn btn-primary">Click for Monitoring</a>
+
          
         </div>
       </div>
@@ -109,7 +110,10 @@
 
     <div class="footer-content">
       <h3>Contact Support</h3>
-      <p>Phone Number: <a href="tel:+1234567890">+1234567890</a></p>
+      <p>Satya Parkash : 8527298880</p>
+      <p>Raju(IT Dept.): 9880736224</p>
+      <p>Amit(Service Eng.): 7289040777</p>
+      <p>Anil(Service Eng.): 8527298883</p>
       <p>Email: <a href="mailto:support@example.com">supportexample.com</a></p>
     </div>
   </div>
