clock added and its working

--- a/src/app/views/apmp/dashboard/dashboard.component.html
+++ b/src/app/views/apmp/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <!-- First Row: Three Equal-Sized Columns -->
     <c-row>
       <c-col xs="12" md="4">
-        <h1>tic data</h1>
+      <app-tic-data></app-tic-data>
       </c-col>
       <c-col xs="12" md="4">
         <app-frequency-offset></app-frequency-offset>
