--- a/src/app/views/apmp/tic-data/tic-data.component.scss
+++ b/src/app/views/apmp/tic-data/tic-data.component.scss
@@ -1,15 +1,4 @@
-.container {
-    padding: 20px;
-    background-color: #f8f9fa;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  li {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-  }
-  
+/* Add any custom styles here if needed */
+.table {
+  margin-top: 1rem;
+}
