--- a/src/app/views/apmp/phase-correction/phase-correction.component.html
+++ b/src/app/views/apmp/phase-correction/phase-correction.component.html
@@ -1,1 +1,38 @@
-<h1>phase correction data</h1>
+<div class="card">
+  <div class="card-header">
+    <h5 class="card-title">Phase correction steps
+    </h5>
+  </div>
+  <div class="card-body">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Max</th>
+          <th>Min</th>
+          <th>Correction (Hz)</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let row of rows; let i = index">
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="row.input1" />
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="row.input2" />
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="row.input3" />
+          </td>
+          <td>
+            <button class="btn btn-danger" (click)="removeRow(i)">Remove</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <button class="btn btn-primary" (click)="addRow()">Add Row</button>
+  </div>
+  <div class="card-footer text-right">
+    <button class="btn btn-success" (click)="applyChanges()">Apply</button>
+  </div>
+</div>
