--- a/src/app/views/apmp/rubidium-steering/rubidium-steering.component.html
+++ b/src/app/views/apmp/rubidium-steering/rubidium-steering.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <h5 class="card-title">Control Panel</h5>
+    <h5 class="card-title">Rubidium steering</h5>
   </div>
   <div class="card-body">
     <!-- First Row: Two Input Fields and Start/Stop Buttons -->
