--- a/src/app/views/apmp/rubidium-steering/rubidium-steering.component.html
+++ b/src/app/views/apmp/rubidium-steering/rubidium-steering.component.html
@@ -33,7 +33,14 @@
           <!-- Plot placeholder -->
           <div id="plot" class="plot">
             <!-- Use your charting library here, e.g., Chart.js or any other library -->
-            <p>Plot goes here</p>
+            <c-card class="mb-4">
+              <c-card-header>
+                Rubidium Steering Plot
+              </c-card-header>
+              <c-card-body>
+                <c-chart type="line" [data]="" [options]="barChartOptions"></c-chart>
+              </c-card-body>
+            </c-card>
           </div>
         </div>
       </div>
