rajkumar ui changes

--- a/src/app/views/apmp/dashboard/dashboard.component.html
+++ b/src/app/views/apmp/dashboard/dashboard.component.html
@@ -7,16 +7,14 @@
     <c-col xs="12" md="6">
       <app-frequency-offset></app-frequency-offset>
     </c-col>
-
   </c-row>
-
   <c-row>
-    <c-col xs="12" md="12">
-      <app-phase-correction></app-phase-correction>
+    <c-col xs="12">
+      <app-phase-adjustment></app-phase-adjustment>
     </c-col>
   </c-row>
 
-  <br>
+
 
   <c-row>
     <app-rubidium-steering></app-rubidium-steering>
