--- a/src/app/views/apmp/frequency-offset/frequency-offset.component.html
+++ b/src/app/views/apmp/frequency-offset/frequency-offset.component.html
@@ -19,7 +19,7 @@
 
 <c-col>
   <c-card class="mb-4">
-    <c-card-header>
+    <c-card-header style="text-align: center;">
       TIC Data Slope
     </c-card-header>
     <c-card-body>
