--- a/src/app/views/apmp/tic-data/tic-data.component.html
+++ b/src/app/views/apmp/tic-data/tic-data.component.html
@@ -1,22 +1,14 @@
 <form cForm>
   <div class="mb-3">
     <label cLabel for="exampleFormControlInput1">TIC Source address</label>
-    <input
-    type="text"
-    id="ipAddress"
-    [(ngModel)]="ipAddress"
-    (ngModelChange)="onIPChange($event)"
-    name="ipAddress"
-    class="form-control"
-    placeholder="Enter IP Address"
-    required
-  />
+    <input type="text" id="ipAddress" [(ngModel)]="ipAddress" (ngModelChange)="onIPChange($event)" name="ipAddress"
+      class="form-control" placeholder="Enter IP Address" required />
   </div>
 </form>
 
 <c-col>
   <c-card class="mb-4">
-    <c-card-header>
+    <c-card-header style="text-align: center;">
       TIC Real-time-data
     </c-card-header>
     <c-card-body>
